--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-le-utils==0.0.9rc23
-ricecooker>=0.6.2
+le-utils>=0.1.3
+ricecooker>=0.6.10
 youtube-dl>=2017.6.25
 pycountry>=17.5.14
 moviepy>=0.2.3.2
